<resources>

    <string name="app_name">alarm for ww</string>
    <string name="sleep">睡觉觉啦!</string>
    <string name="input_hour_hint">小时</string>
    <string name="input_minute_hint">分钟</string>
    <string name="colon">:</string>
    <string name="short_sleep">紧急睡眠6小时</string>
    <string name="normal_sleep">标准睡眠8小时</string>
    <string name="long_sleep">猪一样的10小时</string>
    <string name="repeatable_label">重复性</string>
    <string name="vibrator_label">震动</string>
    <string name="remark_label">备注</string>
    <string name="sleepTime_label">睡眠时间</string>
    <string name="getupTime_label">起床时间</string>
    <string name="confirm">确定</string>
    <string name="alarm_add">添加闹钟</string>
    <string name="alarm_close">关闭闹钟</string>
    <string name="delay_five_minute">推迟5分钟</string>
</resources>
